static/scss/_bootstrap3.scss
/* ... */
.panel.pulse,
.panel.fadeIn {
    animation-duration: 200ms;
}

@include media-breakpoint-down(md) {
    .panel-profile-controls {
        padding-left: 0 !important;
        padding-top: 50px;
    }

    .panel-profile .panel-profile-header .img-profile-data h1 {
        font-size: 20px !important;
        margin-bottom: 2px;
    }
}

.panel-body > .tab-menu {
    margin-left: -10px;
    margin-right: -10px
}

//
// Well
// --------------------------------------------------
.well-small {
    padding: 10px;
    border-radius: 3px;
}

.well {
    border: none;
    box-shadow: none;
    background-color: var(--hh-background-color-secondary);
    margin-bottom: 1px;

    hr {
        margin: 10px 0;
        border-top: 1px solid var(--hh-background-color-secondary);
    }

    table > thead {
        font-size: 11px;
    }
}


//
// Modals
// --------------------------------------------------

.modal.in {
    padding-right: 0 !important;
}

.modal-dialog-extra-small {
    width: 400px;
}

.modal-dialog-small {
    width: 500px;
}

.modal-dialog-normal {
    width: 600px;
}

.modal-dialog-medium {
    width: 768px;
}

.modal-dialog-large {
    width: 900px;
}


//
// Loader
// --------------------------------------------------

// SpinKit (Loader)
.sk-adjust-huener-three-bounce.sk-adjust-huener {
    margin: 0 auto;
    width: 70px;
    text-align: center;
}

// Ajax loader
.loader {
    padding: 30px 0;

    .sk-adjust-huener-three-bounce div, .sk-adjust-huener-three-bounce span {
        width: 12px;
        height: 12px;
        background-color: var(--bs-accent);
        border-radius: 100%;
        display: inline-block;
        animation: sk-threeBounceDelay 1.4s infinite ease-in-out;
        /* Prevent first frame from flickering when animation starts */
        animation-fill-mode: both;
    }

    .sk-adjust-huener-three-bounce .sk-bounce1 {
        animation-delay: -0.32s;
    }

    .sk-adjust-huener-three-bounce .sk-bounce2 {
        animation-delay: -0.16s;
    }

    @keyframes sk-threeBounceDelay {
        0%,
        80%,
        100% {
            transform: scale(0);
        }
        40% {
            transform: scale(1);
        }
    }
}

.loader-modal {
    padding: 8px 0;
}

.loader-postform {
    padding: 9px 0;

    .sk-adjust-huener-three-bounce.sk-adjust-huener {
        text-align: left;
        margin: 0;
    }
}


//
// Button
// --------------------------------------------------

.btn-default {
    background: var(--bs-light);
    color: var(--hh-text-color-default) !important;

    &:hover,
    &:focus {
        background: darken($light, 2%);
        color: var(--hh-text-color-default);
        text-decoration: none;
    }

    &:active,
    &.active {
        outline: 0;
        background: darken($light, 5%);
    }
}

.btn-default[disabled],
.btn-default.disabled {
    background: lighten($light, 2%);

    &:hover,
    &:focus {
        background: lighten($light, 2%);
    }

    &:active,
    &.active {
        background: lighten($light, 2%);
    }
}


.btn-xs {
    padding: 1px 5px;
    font-size: 12px;
}

// Temporary exceptions for "active" Primary and Info buttons to display as outlined
// See https://github.com/humhub/humhub-internal/issues/661#issuecomment-2968279827
.btn-primary {
    --bs-btn-active-color: var(--bs-primary);
    --bs-btn-active-bg: var(--hh-background-color-main);
    --bs-btn-active-border-color: var(--bs-primary);
}
.btn-info {
    --bs-btn-active-color: var(--bs-accent);
    --bs-btn-active-bg: var(--hh-background-color-main);
    --bs-btn-active-border-color: var(--bs-accent);
}

//
// BS3 Less Mixins used as classes
// --------------------------------------------------

/* Default */
.colorDefault {
    color: var(--bs-light);
}

.backgroundDefault {
    background: var(--bs-light);
}

.borderDefault {
    border-color: var(--bs-light);
}

/* Primary */
.colorPrimary {
    color: var(--bs-primary) !important;
}

.backgroundPrimary {
    background: var(--bs-primary) !important;
}

.borderPrimary {
    border-color: var(--bs-primary) !important;
}

/* Info */
.colorInfo {
    color: var(--bs-accent) !important;
}

.backgroundInfo {
    background: var(--bs-accent) !important;
}

.borderInfo {
    border-color: var(--bs-accent) !important;
}

/* Link */
.colorLink {
    color: var(--bs-link-color) !important;
}

/* Success */
.colorSuccess {
    color: var(--bs-success) !important;
}

.backgroundSuccess {
    background: var(--bs-success) !important;
}

.borderSuccess {
    border-color: var(--bs-success) !important;
}

/* Warning */
.colorWarning {
    color: var(--bs-warning) !important;
}

.backgroundWarning {
    background: var(--bs-warning) !important;
}

.borderWarning {
    border-color: var(--bs-warning) !important;
}

/* Danger */
.colorDanger {
    color: var(--bs-danger) !important;
}

.backgroundDanger {
    background: var(--bs-danger) !important;
}

.borderDanger {
    border-color: var(--bs-danger) !important;
}

/* Fonts */
.colorFont1 {
    color: var(--hh-text-color-soft3) !important;
}

.colorFont2 {
    color: var(--hh-text-color-secondary) !important;
}

.colorFont3 {
    color: var(--hh-text-color-highlight) !important;
}

.colorFont4 {
    color: var(--hh-text-color-soft) !important;
}

.colorFont5 {
    color: var(--hh-text-color-soft2) !important;
}

